Fix self-service widgets alignment (CO-2648)

--- a/app/webroot/css/co-responsive.css
+++ b/app/webroot/css/co-responsive.css
@@ -533,7 +533,6 @@
     align-items: center;
     border-bottom: 1em solid transparent;
     justify-content: space-between;
-    align-items: end;
   }
   /* GENERAL */
   .submit-buttons {
